# mco

./: Modules details.md  README.md
DrawIO/: WhiteBoard.drawio  phase 5.drawio
RedHat/: qm.container  qm.service
mixed-criticality-orchestrator/: .gitignore  .~lock.testcase.csv#  Doxyfile  testcase.csv
mixed-criticality-orchestrator/Documentation/: Lingua Franca Orchestrator.md  approach.md  class.docx
mixed-criticality-orchestrator/mc_orchestrator/: CMakeLists.txt  main.cpp  steps.md
mixed-criticality-orchestrator/mc_orchestrator/bl/: CMakeLists.txt
mixed-criticality-orchestrator/mc_orchestrator/bl/inc/: mco_avp_trigger_monitor_handler.hpp  mco_qm_ota_handler.hpp  mco_resource_monitor_handler.hpp  mco_server_handler.hpp  mco_user_app_control_handler.hpp
mixed-criticality-orchestrator/mc_orchestrator/bl/src/: mco_avp_trigger_monitor_handler.cpp  mco_qm_ota_handler.cpp  mco_resource_monitor_handler.cpp  mco_server_handler.cpp  mco_user_app_control_handler.cpp
mixed-criticality-orchestrator/mc_orchestrator/common/: CMakeLists.txt
mixed-criticality-orchestrator/mc_orchestrator/common/inc/: mco_common.hpp  mco_config_handler.hpp  mco_curl_handler.hpp  mco_database_handler.hpp  mco_mqtt_handler.hpp  mco_utils.hpp
mixed-criticality-orchestrator/mc_orchestrator/common/src/: mco_config_handler.cpp  mco_curl_handler.cpp  mco_database_handler.cpp  mco_mqtt_handler.cpp  mco_utils.cpp
mixed-criticality-orchestrator/mc_orchestrator/data/: config.json  old_resource_ui.py  resource_monitor.py  ui.py  vs_new.yaml
mixed-criticality-orchestrator/mc_orchestrator/data/apps_container/: app1.container  app1.json
mixed-criticality-orchestrator/mc_orchestrator/data/asil_apps/: avp.json  laneAssist.json
mixed-criticality-orchestrator/mc_orchestrator/data/dummy_images/: Dockerfile  app1.json  app1.yaml  app2.json
mixed-criticality-orchestrator/mc_orchestrator/data/ota/: app1.json  app1.yaml  app2.json  app2.yaml  app3.json  app3.yaml  app4.json  app4.yaml  app5.json  app5.yaml  app6.yaml
mixed-criticality-orchestrator/mc_orchestrator/data/videostreaming_app/: Dockerfile  IP-config.yaml  setup_docker_vs.sh  vs_new.yaml  vs_svc.yaml
mixed-criticality-orchestrator/mc_orchestrator/data/videostreaming_app/vs/: server.py  stress_values.json
mixed-criticality-orchestrator/mc_orchestrator/json-3.7.3/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
mixed-criticality-orchestrator/mc_orchestrator/json-3.7.3/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mixed-criticality-orchestrator/mc_orchestrator/json-3.7.3/test/cmake_add_subdirectory/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mixed-criticality-orchestrator/mc_orchestrator/json-3.7.3/test/cmake_import/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mixed-criticality-orchestrator/mc_orchestrator/json-3.7.3/test/cmake_import_minver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mixed-criticality-orchestrator/mc_orchestrator/runtime/: CMakeLists.txt
mixed-criticality-orchestrator/mc_orchestrator/runtime/inc/: mco_bluechi_commands.hpp  mco_command_factory.hpp  mco_commands.hpp  mco_k3s_commands.hpp  mco_podman_commands.hpp
mixed-criticality-orchestrator/mc_orchestrator/runtime/src/: mco_bluechi_commands.cpp  mco_command_factory.cpp  mco_k3s_commands.cpp  mco_podman_commands.cpp
mixed-criticality-orchestrator/mc_orchestrator/unitTest/: CMakeLists.txt  lfo_server_handler_test.cpp
mixed-criticality-orchestrator/nativeUI/: ui.py
mixed-criticality-orchestrator/ota_handler/: ota_server.py  upload_zip.sh
mixed-criticality-orchestrator/vehicle_abstraction_layer/hpc_resource_utilization/: Cargo.toml
mixed-criticality-orchestrator/vehicle_abstraction_layer/hpc_resource_utilization/src/: main.rs
(+7869 files in other folders)
