[package]
name = "hpc_resource_utilization"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.5.4"
sysinfo = "0.20.3"
rumqttc = "0.8.0"
tokio = { version = "1", features = ["full"] }
redis = "0.8.0"